tests/NormalTests/paczka1/fuzzy1/71942769.err
Error in line 11: J77JknqTRY S719 50,5
Error in line 15: J77JknqTRY S276 54,6
Error in line 20: S719 A834 38,0
Error in line 24: S719 S719 3,6
